--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@ body {
 	justify-content: space-around;
 }
 
+.controls {
+	display: flex;
+	flex-direction: column;
+	font-family: 'Helvetica Neue', sans-serif;
+}
+
+.control {
+	margin-bottom: 2em;
+}
+
 .tree-container {
 	width: 100%;
 	height: 100vh;
