--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@ body {
 	text-align: center;
 }
 
-.decoration {
-	position: absolute;
-	font-size: 30px;
+/*.decoration {
+	width: 30px;
+	height: 30px;
 	z-index: 100;
-}
+}*/
