--- a/style.css
+++ b/style.css
@@ -16,12 +16,21 @@ body {
 	margin-bottom: 2em;
 }
 
-#Triangle {
-	cursor: pointer;
+select, button {
+	font-size: 1.2em;
+}
+
+.tree-container {
+	margin-top: 50px;
 }
 
 .main-tree {
-	padding: 0 50px;}
+	padding: 0 50px;
+}
+
+#Triangle {
+	cursor: pointer;
+}
 
 .topper {
   width: 100%;
@@ -34,8 +43,10 @@ body {
 .present-container {
 	font-size: 3em;
 	text-align: center;
+	line-height: 0.6em;
 	width: 452px;
 	padding: 0 50px;
+	margin-top: -15px;
 }
 
 .decoration {
