--- a/style.css
+++ b/style.css
@@ -2,6 +2,17 @@
 body {
 	display: flex;
 	justify-content: space-between;
+	background-color: #DCDCDC;
+}
+
+.ground {
+	position: absolute;
+	background-color: #FFF;
+	width: 100%;
+	height: 1000px;
+	left: 0px;
+	top: 600px;
+	z-index: -10;
 }
 
 .controls {
@@ -46,7 +57,7 @@ select, button {
 	line-height: 0.6em;
 	width: 452px;
 	padding: 0 50px;
-	margin-top: -15px;
+	margin-top: -20px;
 }
 
 .decoration {
