--- a/style.css
+++ b/style.css
@@ -24,9 +24,14 @@ body {
 	min-width: 300px;
 	display: flex;
 	flex-direction: column;
+	padding: 10px;
 	margin-right: 50px;
 	text-align: center;
 	font-family: 'Helvetica Neue', sans-serif;
+	border: 1px solid grey;
+	border-radius: 5px;
+	background-color: #FFF;
+	box-shadow: 3px 3px grey;
 }
 
 .control {
@@ -40,7 +45,7 @@ select, button {
 .sound-effect-box {
 	border: 1px solid grey;
 	border-radius: 5px;
-	margin: 0 20px;
+	margin: 0 20px 20px;
 }
 
 .tree-container {
@@ -76,6 +81,13 @@ select, button {
 	position: absolute;
 	font-size: 30px;
 	z-index: 100;
+}
+
+.tinsel {
+	stroke: var(--secondary-colour);
+	stroke-width: 18;
+	stroke-linecap: round;
+	stroke-linejoin: round;
 }
 
 .snowflake {
