--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 :root {
 	--primary-colour: #ff0000;
 	--secondary-colour: #DAA520;
+	--tinsel-colour: #C0C0C0;
 }
 
 body {
@@ -84,8 +85,9 @@ select, button {
 }
 
 .tinsel {
-	stroke: var(--secondary-colour);
+	stroke: var(--tinsel-colour);
 	stroke-width: 18;
+	fill: none;
 	stroke-linecap: round;
 	stroke-linejoin: round;
 }
